--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,22 @@
         <maven.resources.encoding>${project.build.sourceEncoding}</maven.resources.encoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+        <maven.version>3.8.6</maven.version>
     </properties>
 
     <dependencies>
         <!-- Plugin SDK dependencies -->
         <dependency>
             <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <version>${maven.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.8.6</version>
-            <scope>provided</scope>
+            <scope>${maven.version}</scope>
         </dependency>
 
         <dependency>
