--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,14 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>${maven.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>3.8.6</version>
-            <scope>${maven.version}</scope>
+            <version>${maven.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -41,6 +42,7 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Report Portal dependencies -->
         <dependency>
             <groupId>com.epam.reportportal</groupId>
             <artifactId>client-java</artifactId>
